Fix a couple of FindBugs warnings
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/dbcp/trunk@1562954 13f79535-47bb-0310-9956-ffa450edef68